tests/grammar/snapshots/r#mod__grammar__alpha034__number-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"-1.0\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Neg(
                            (
                                "-",
                                0..1,
                            ),
                            (
                                Number(
                                    (
                                        1.0,
                                        1..4,
                                    ),
                                ),
                                1..4,
                            ),
                        ),
                        1..4,
                    ),
                ),
                0..4,
            ),
        ),
        0..4,
    ),
]
