tests/grammar/snapshots/r#mod__grammar__alpha034__number-5.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"-1.24\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Neg(
                            (
                                "-",
                                0..1,
                            ),
                            (
                                Number(
                                    (
                                        1.24,
                                        1..5,
                                    ),
                                ),
                                1..5,
                            ),
                        ),
                        1..5,
                    ),
                ),
                0..5,
            ),
        ),
        0..5,
    ),
]
