tests/grammar/snapshots/r#mod__grammar__alpha034__recovery-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(r#\"\n        import {}\n\n    \"#))"
---
(
    Some(
        [
            (
                Import(
                    (
                        false,
                        9..15,
                    ),
                    (
                        "import",
                        9..15,
                    ),
                    (
                        ImportSpecific(
                            [],
                        ),
                        16..18,
                    ),
                    (
                        "from",
                        18..18,
                    ),
                    (
                        "",
                        18..18,
                    ),
                ),
                9..18,
            ),
        ],
    ),
    [
        found end of input at 18..18 expected '"from"',
        found end of input at 18..18 expected something else, or '"\""',
    ],
)
