tests/grammar/snapshots/r#mod__grammar__alpha034__semicolon-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"1; 2;\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Number(
                            (
                                1.0,
                                0..1,
                            ),
                        ),
                        0..1,
                    ),
                ),
                0..1,
            ),
        ),
        0..1,
    ),
    (
        Statement(
            (
                Expression(
                    (
                        Number(
                            (
                                2.0,
                                3..4,
                            ),
                        ),
                        3..4,
                    ),
                ),
                3..4,
            ),
        ),
        3..4,
    ),
]
