tests/grammar/snapshots/r#mod__grammar__alpha034__semicolon.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"1;\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Number(
                            (
                                1.0,
                                0..1,
                            ),
                        ),
                        0..1,
                    ),
                ),
                0..1,
            ),
        ),
        0..1,
    ),
]
